NULL=

icondir = $(datadir)/pixmaps/marlin

icon_DATA =\
	thumbnail_frame.png \
	bread_left.png \
	bread_right.png \
	bread_center.png \
	bread_separator.png \
        view-list-icons-symbolic.svg \
        view-list-details-symbolic.svg \
        view-list-compact-symbolic.svg \
        view-list-column-symbolic.svg \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
